[package]
name = "roguelike"
version = "0.1.0"
authors = ["MattWoelk <matt.woelk@gmail.com>"]
edition = "2018"

[dependencies]
tcod = "0.15.0"
specs = "0.14.3"
specs-derive = "0.4.0"
lazy_static = "1.3.0"
rendy-shader = "0.3.0"
failure = "0.1.5"
rendy-util = "0.3.0"
log = "0.4.6"
env_logger = "0.6.1"

[dependencies.rendy]
version = "0.3.1"
features = ["dx12"]
